# qt5_dummy

./: README.md
console/: mainwindow.cpp  mainwindow.h  settingsdialog.h
notepad/: CMakeLists.txt  icons.qrc  main.cpp  notepad.cpp  notepad.h  notepad.pro  notepad.ui
openclassroom/: README.md
openclassroom/2_sa_fenetre/: CMakeLists.txt
openclassroom/3_ma_fenetre/: MaFenetre.cpp  main.cpp
openclassroom/4_ma_fenetre/: CMakeLists.txt  MaFenetre.cpp  MaFenetre.h
openclassroom/ma_fenetre/: MaFenetre.h
openclassroom/sa_fenetre/: SaFenetre.cpp
